--- a/src/test/resources/cucumber.properties
+++ b/src/test/resources/cucumber.properties
@@ -1,2 +1,3 @@
 cucumber.glue=src/test/java/steps
 cucumber.features=src/test/resources/features/simpleTests.feature
+#cucumber.plugin=pretty, html:build/reports/cucumber-report.html, json:build/reports/cucumber.json
